--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,47 +1,85 @@
 ---
-# The following role attempts to download any requested Android Studio
-# versions and configure them on the system level.
 
-- name: Assert task variables
-  ansible.builtin.import_tasks: assertions/assert.yml
+- name: "HTH | Android Studio | Assert inputs"
+  ansible.utils.validate:
+    data: "{{ android_studio }}"
+    criteria: "{{ lookup('file', 'assertions/criteria/android-studio-criteria.json') | from_json }}"
+    engine: ansible.utils.jsonschema
   run_once: yes
   delegate_to: localhost
+  when:
+    - android_studio is defined
 
+- name: "HTH | Android Studio | Set installation path"
+  ansible.builtin.set_fact:
+    android_studio_path: "{{ android_studio.location.path | default(android_studio_default_path) }}"
+  when:
+    - android_studio is defined
 
-- name: Download clients
-  ansible.builtin.include_tasks: download.yml
-  loop: "{{ android_studio_clients }}"
+- name: "HTH | Android Studio | Set installation path owner"
+  ansible.builtin.set_fact:
+    android_studio_path_owner: "{{ android_studio.location.owner | default('root') }}"
+  when:
+    - android_studio is defined
+
+- name: "HTH | Android Studio | Set installation path group"
+  ansible.builtin.set_fact:
+    android_studio_path_group: "{{ android_studio.location.group | default(android_studio.location.owner) | default('root') }}"
+  when:
+    - android_studio is defined
+
+- name: "HTH | Android Studio | Set installation path mode"
+  ansible.builtin.set_fact:
+    android_studio_path_mode: "{{ android_studio.location.mode | default('0755') }}"
+  when:
+    - android_studio is defined
+
+- name: "HTH | Android Studio | Ensure installation path"
+  ansible.builtin.file:
+    path: "{{ android_studio_path }}"
+    owner: "{{ android_studio_path_owner }}"
+    group: "{{ android_studio_path_group }}"
+    mode: "{{ android_studio_path_mode }}"
+    modification_time: preserve
+    access_time: preserve
+    state: directory
+  when:
+    - android_studio is defined
+
+- name: "HTH | Android Studio | Install clients"
+  ansible.builtin.include_tasks: install.yml
+  loop: "{{ android_studio.clients }}"
   loop_control:
     loop_var: client
-  when: android_studio_clients | length > 0
-
-
-- name: Assign 'STUDIO_JDK' environment variable
-  ansible.builtin.lineinfile: 
-    path: /etc/profile.d/android.sh
-    regexp: "^export STUDIO_JDK=" 
-    line: "export STUDIO_JDK={{ android_studio_jdk }}"
-    create: yes
-    mode: 0644
   when:
-    - android_studio_jdk is defined
+    - android_studio is defined
+    - android_studio.clients is defined
+    - android_studio.clients | length > 0
 
-
-- name: Configure primary studio client
-  ansible.builtin.include_tasks: configure.yml
-  vars:
-    client: "{{ android_studio_primary }}"
-    symlink: "astudio"
-    file_name: "android-studio" 
+- name: "HTH | Android Studio | Configure environment"
+  ansible.builtin.include_tasks: environment.yml
   when:
-    - android_studio_primary is defined
+    - android_studio is defined
+    - android_studio.environment is defined
 
-
-- name: Configure canary studio client
-  ansible.builtin.include_tasks: configure.yml
+- name: "HTH | Android Studio | Create primary desktop entry"
+  ansible.builtin.include_tasks: desktop.yml
   vars:
-    client: "{{ android_studio_canary }}"
-    symlink: "astudioc"
+    client: "{{ android_studio.primary }}"
+    default_symlink_name: "astudio"
+    file_name: "android-studio"
+    default_desktop_entry_name: "Android Studio"
+  when:
+    - android_studio is defined
+    - android_studio.primary is defined
+
+- name: "HTH | Android Studio | Create canary desktop entry"
+  ansible.builtin.include_tasks: desktop.yml
+  vars:
+    client: "{{ android_studio.canary }}"
+    default_symlink_name: "astudioc"
     file_name: "android-studio-canary"
+    default_desktop_entry_name: "Android Studio Canary"
   when:
-    - android_studio_canary is defined
+    - android_studio is defined
+    - android_studio.canary is defined  
