--- a/tasks/environment.yml
+++ b/tasks/environment.yml
@@ -33,7 +33,7 @@
     path: "{{ android_environment_file_path }}"
     regexp: "^export STUDIO_JDK=" 
     line: "export STUDIO_JDK={{ android_studio.environment.jdk_path.value }}"
-    state: "{{ 'absent' if (android_studio.environment.jdk_path.remove) else 'present' }}"
+    state: "{{ 'absent' if (android_studio.environment.jdk_path.remove is defined and android_studio.environment.jdk_path.remove) else 'present' }}"
     create: yes
     mode: "{{ android_environment_file_mode }}"
     owner: "{{ android_environment_file_owner }}"
@@ -49,7 +49,7 @@
     path: "{{ android_environment_file_path }}"
     regexp: "^export ANDROID_HOME=" 
     line: "export ANDROID_HOME={{ android_studio.environment.sdk_path.value }}"
-    state: "{{ 'absent' if (android_studio.environment.sdk_path.remove) else 'present' }}"
+    state: "{{ 'absent' if (android_studio.environment.sdk_path.remove is defined and android_studio.environment.sdk_path.remove) else 'present' }}"
     create: yes
     mode: "{{ android_environment_file_mode }}"
     owner: "{{ android_environment_file_owner }}"
@@ -65,7 +65,7 @@
     path: "{{ android_environment_file_path }}"
     regexp: "^export ANDROID_USER_HOME=" 
     line: "export ANDROID_USER_HOME={{ android_studio.environment.preferences_path.value }}"
-    state: "{{ 'absent' if (android_studio.environment.preferences_path.remove) else 'present' }}"
+    state: "{{ 'absent' if (android_studio.environment.preferences_path.remove is defined and android_studio.environment.preferences_path.remove) else 'present' }}"
     create: yes
     mode: "{{ android_environment_file_mode }}"
     owner: "{{ android_environment_file_owner }}"
@@ -81,7 +81,7 @@
     path: "{{ android_environment_file_path }}"
     regexp: "^export ANDROID_EMULATOR_HOME=" 
     line: "export ANDROID_EMULATOR_HOME={{ android_studio.environment.emulator_path.value }}"
-    state: "{{ 'absent' if (android_studio.environment.emulator_path.remove) else 'present' }}"
+    state: "{{ 'absent' if (android_studio.environment.emulator_path.remove is defined and android_studio.environment.emulator_path.remove) else 'present' }}"
     create: yes
     mode: "{{ android_environment_file_mode }}"
     owner: "{{ android_environment_file_owner }}"
@@ -97,7 +97,7 @@
     path: "{{ android_environment_file_path }}"
     regexp: "^export ANDROID_AVD_HOME=" 
     line: "export ANDROID_AVD_HOME={{ android_studio.environment.avd_path.value }}"
-    state: "{{ 'absent' if (android_studio.environment.avd_path.remove) else 'present' }}"
+    state: "{{ 'absent' if (android_studio.environment.avd_path.remove is defined and android_studio.environment.avd_path.remove) else 'present' }}"
     create: yes
     mode: "{{ android_environment_file_mode }}"
     owner: "{{ android_environment_file_owner }}"
